# a-share

./: .gitignore  AGENTS.md
big-a/: .env.example  .gitignore  README.md  main.py  pyproject.toml  ruff.toml
big-a/configs/: base.yaml  watchlist.yaml
big-a/configs/backtest/: real_trading.yaml  rolling_csi300.yaml  topk_csi300.yaml
big-a/configs/data/: handler_alpha158.yaml  handler_custom.yaml  universe.yaml
big-a/configs/model/: hedge_fund.yaml  kronos.yaml  lightgbm.yaml
big-a/configs/simulation/: default.yaml
big-a/docs/: index.md
big-a/docs/modules/: backtest.md  models.md
big-a/docs/reference/: glossary.md
big-a/notebooks/: 01_data_exploration.ipynb  02_factor_analysis.ipynb  03_model_comparison.ipynb  04_backtest_demo.ipynb
big-a/scripts/: AGENTS.md  analyze.py  backtest.py  com.big-a.watchlist-update.plist  compare_experiments.py  e2e.py  evaluate.py  predict_kronos.py  predict_lightgbm.py  real_trading_backtest.py  roll_backtest.py  run.py  run_simulation.py  run_universe.py  train_lightgbm.py  update_daily.py  update_data.py  update_watchlist.py  validate_data.py  watchlist_report.py
big-a/src/big_a/: AGENTS.md  __init__.py  config.py  experiment.py  qlib_config.py
big-a/tests/: AGENTS.md  __init__.py  conftest.py  test_alpha158.py  test_analysis.py  test_backtest.py  test_custom_factors.py  test_data_validation.py  test_evaluation.py  test_experiment.py  test_kronos.py  test_lightgbm.py  test_monitoring.py  test_real_trading.py  test_report.py  test_rolling.py  test_rotation.py  test_scheduler.py  test_screener.py  test_sector.py  test_smoke.py  test_tracking_e2e.py
big-a/tests/models/: test_deps.py  test_hedge_fund_agents_investors_batch1.py  test_hedge_fund_agents_investors_batch2.py  test_hedge_fund_agents_portfolio.py  test_hedge_fund_agents_risk.py  (+8 more)
docs/: index.md
(+109 files in other folders)
